<resources>
    <string name="app_name">Monitoring</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="akun">Akun</string>
    <string name="title_history">History</string>
    <string name="title_home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_password">Change Password</string>
    <string name="my_profile">My Profile</string>
    <string name="nama">Nama</string>
    <string name="register">Register</string>
    <string name="job">Posisi</string>
    <string name="no_hp">Nomor Handphone</string>
    <string name="current_in">Current Charging</string>
    <string name="nilai_sekarang">Nilai Sekarang</string>
    <string name="tegangan">Volt</string>
    <string name="current_out">Current Discharging</string>
    <string name="SoC">SoC</string>
    <string name="suhu">Suhu</string>
    <string name="grafik_tegangan">Volt Graphic</string>
    <string name="grafik_arus_keluar">Current Discharging Graphic</string>
    <string name="grafik_arus_masuk">Current Charging Graphic</string>
    <string name="grafik_soc">SoC Graphic</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet</string>
    <string name="notification">Notification</string>
    <string name="history">History</string>
    <string name="select_date">Select Date</string>
    <string name="date">date</string>
    <string name="time">Time</string>
    <string name="please_login_with_your_information">Please login with your information</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_account">Register Account</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="no">No</string>
    <string name="pilih_panel_surya">Pilih Panel Surya</string>
    <string-array name="period_array">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
</resources>