<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableRow>
        <TextView
            android:id="@+id/data_current_in"
            android:layout_width="96dp"
            android:text="@string/current_in"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="4dp"
            android:fontFamily="@font/roboto_medium"/>
        <TextView
            android:id="@+id/data_current_out"
            android:layout_width="96dp"
            android:text="@string/current_out"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="4dp"
            android:fontFamily="@font/roboto_medium"/>
        <TextView
            android:id="@+id/data_tegangan"
            android:layout_width="96dp"
            android:text="@string/tegangan"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="4dp"
            android:fontFamily="@font/roboto_medium"/>
        <TextView
            android:id="@+id/data_soc"
            android:layout_width="48dp"
            android:text="@string/SoC"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="4dp"
            android:fontFamily="@font/roboto_medium"/>
        <TextView
            android:id="@+id/data_time"
            android:layout_width="144dp"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="4dp"
            android:fontFamily="@font/roboto_medium"/>
    </TableRow>
</TableLayout>