<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.data.DataShowFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/green" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/date"
        android:textColor="@color/green"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/table_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:attr/dividerHorizontal"
                android:stretchColumns="5"
                android:showDividers="beginning|middle|end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow>
                    <TextView
                        android:layout_width="104dp"
                        android:text="@string/current_in"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:padding="8dp"
                        android:fontFamily="@font/roboto_bold"/>
                    <TextView
                        android:layout_width="104dp"
                        android:text="@string/current_out"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:padding="8dp"
                        android:fontFamily="@font/roboto_bold"/>
                    <TextView
                        android:layout_width="104dp"
                        android:text="@string/tegangan"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:padding="8dp"
                        android:fontFamily="@font/roboto_bold"/>
                    <TextView
                        android:layout_width="78dp"
                        android:text="@string/SoC"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:padding="8dp"
                        android:fontFamily="@font/roboto_bold"/>
                    <TextView
                        android:layout_width="156dp"
                        android:text="@string/time"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:padding="8dp"
                        android:fontFamily="@font/roboto_bold"/>
                </TableRow>
            </TableLayout>

            <ScrollView
                android:id="@+id/vertical_scroll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/table_data">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_data_show"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="true"
                        android:orientation="vertical"
                        tools:listitem="@layout/item_data_show" />
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>